--- a/app/views/regionalchapterawards/_form.html.erb
+++ b/app/views/regionalchapterawards/_form.html.erb
@@ -12,17 +12,8 @@
           ['Best Regional Chapter Award (Category B)', 'Category B'],
           ['Best Regional Chapter Award (Category C)','Category C']]), {}, {class: "form-control", autofocus: true}) %>
     </div>
-    <div class="form-group col-md-2">
-      <%= f.label :region  %>
-      <%= f.select(:region, options_for_select([
-          ['I', '1'], 
-          ['II', '2'],
-          ['III','3'], 
-          ['IV', '4'], 
-          ['V', '5'], 
-          ['VI', '6']]), {}, {class: "form-control"}) %>
-    </div>
-    <div class="form-group col-md-2">
+    
+    <div class="form-group col-md-4">
       <%= f.label :chapter  %>
      
       <%= f.select(:chapter, options_for_select([
@@ -109,45 +100,52 @@
       <%= f.email_field :email  , required: true , type: "email" , class: "form-control"%>
     </div>
     </div>
-    
     <br></br>
+    <div class="row">
+    
     <div class="col-md-8">
-       <p class="primary-form-subheading">Membership Count</p>
-    <div class="form-group col-md-3">
-      <%= f.label :members_number_till_previous_year , "Number Till 31-03-2015"  %>
+      <div class="col-md-6">
+       <p class="primary-form-subheading">Membership Count Till March 2016</p>
+    <div class="form-group col-md-6">
+      <%= f.label :members_number_till_previous_year , "Annual Members  "  %>
       <%= f.text_field :members_number_till_previous_year  , required: true , type: "number",
       min: "0" ,max: "1000", maxlength: "4", class: "form-control"%>
     </div>
-    <div class="form-group col-md-3">
-      <%= f.label :members_percentage_till_previous_year , "% Till 31-03-2016" %>
+    <div class="form-group col-md-6">
+      <%= f.label :members_percentage_till_previous_year , "Life Members  " %>
       <%= f.text_field :members_percentage_till_previous_year, required: true   , class: "form-control"%>
     </div>
-    <div class="form-group col-md-3">
-      <%= f.label :members_number_till_current_year, "Number Till 31-03-2015"  %>
+    </div>
+    <div class="col-md-6">
+      <p class="primary-form-subheading">Membership Count Till March 2017</p>
+    <div class="form-group col-md-6">
+      <%= f.label :members_number_till_current_year, "Annual Members"  %>
       <%= f.text_field :members_number_till_current_year , required: true , type: "number",
       min: "0" ,max: "1000", maxlength: "4" , class: "form-control"%>
     </div>
-    <div class="form-group col-md-3">
-      <%= f.label :members_percentage_till_current_year, "% Till 31-03-2016"  %>
+    <div class="form-group col-md-6">
+      <%= f.label :members_percentage_till_current_year, "Life Members"  %>
       <%= f.text_field :members_percentage_till_current_year, required: true  , class: "form-control"%>
     </div>
     </div>
+    </div>
+    
     
      <div class="col-md-4">
         <p class="primary-form-subheading">Student Branches Count</p>
     <div class="form-group col-md-6">
-      <%= f.label :student_branch_number_previous_year  , "As on 31-3-2015"  %>
+      <%= f.label :student_branch_number_previous_year  , "As on 31-3-2016"  %>
       <%= f.text_field :student_branch_number_previous_year , required: true , type: "number",
       min: "0" ,max: "1000", maxlength: "4" , class: "form-control"%>
     </div>
     <div class="form-group col-md-6">
-      <%= f.label :student_branch_number_current_year  , "As on 31-3-2016" %>
+      <%= f.label :student_branch_number_current_year  , "As on 31-3-2017" %>
       <%= f.text_field :student_branch_number_current_year, required: true   , type: "number",
       min: "0" ,max: "1000", maxlength: "4", class: "form-control"%>
     </div>
     </div>
    </div>
-   
+   </div>
    
     <!--sub form details-->
     <br></br>
