--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,7 +63,7 @@ body{
     margin-left: 3em;  
     border: 1px solid black;
     border-radius: 8px;
-    background: rgba(255, 251, 129, 0.81);
+    background: rgba(222, 222, 222, 0.41);
 }
 
 .award-title{
@@ -116,6 +116,18 @@ body{
     padding: 0.5em;
     background-color: #f6f7ff;
 }
+.proof{
+    font-weight: bold;
+    color: rgba(162, 18, 18, 0.77);
+    font-size: 16px;
+    
+}
+.thirdform{
+        margin-top: 3em;
+    }
+.fifthform    {
+        margin-top: 4em;
+    }
 .showpage-links{
     font-size: 1.7em;
     text-align: center;
