--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -13,37 +13,19 @@ software competition participated by a minimum of 10 students from abroad 01/07/
      <label>Institution Name</label>
      <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
-    <div class="form-group col-md-6">
-      <label>Postal Address</label>
-      <input type="text" class="form-control" id="address" value="
-      <% unless current_sbc_user_data.institute.address.nil? %>
-      <%= current_sbc_user_data.institute.address %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
-   <div class="form-group col-md-4">
-      <%= f.label :imno , "IMNO" %>
+   
+   <div class="form-group col-md-3">
+      <%= f.label :imno , "Institution Number" %>
       <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
       required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
     
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-3">
       <label>City</label>
       <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
     
-    <div class="form-group col-md-4">
-      <label>State</label>
-      <input type="text" class="form-control" id="state"  value="
-      <% unless current_sbc_user_data.institute.state.nil? %>
-      <%= current_sbc_user_data.institute.state %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
+   
     
     
     
@@ -102,15 +84,26 @@ software competition participated by a minimum of 10 students from abroad 01/07/
     <% end %>
     
     
+    
+    
     <div class="links col-md-12">
       <br>
         <%= link_to_add_association 'Add Event', f, :internationalevents , class: "form-button btn btn-primary" %>
+        
     </div>
+    <br>
+    <p class="proof thirdform">(Table may be extended as required.
+    Attach document proof such as photo, invitation, brochure etc along with the list of foreign participants ) *</p>
+     <br>
+     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
     
-     <div>
-        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
-        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
-      </div>
+    <div>
+        
+<%= f.label :attachment %>
+        
+<%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+    
+  </div>
     
     
     <div class="form-group">
