--- a/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
@@ -28,7 +28,9 @@
 </div>
 <div class="form-group sf col-md-3">
         
-        <%= f.text_field :country_name  ,  required: true, class: "form-control" %>
+      <%= f.country_select :country_name , nil ,{}, {class: "form-control"}  %>
+       
+       
 </div>
 
 
