--- a/app/views/highestsponsorshipofcsievents/_supportforcsievent_fields.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_supportforcsievent_fields.html.erb
@@ -16,7 +16,7 @@
 </div>
 <div class="form-group sf col-md-2">
        
-        <%= f.text_area :support_details ,  required: true , class: "form-control"%>
+        <%= f.text_field :support_details ,  required: true , class: "form-control"%>
 </div>
 <div class="form-group sf col-md-2">
         
