--- a/app/views/longestcontinuoussbcs/_form.html.erb
+++ b/app/views/longestcontinuoussbcs/_form.html.erb
@@ -11,38 +11,20 @@ over the past 3 years)
      <label>Institution Name</label>
      <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
-    <div class="form-group col-md-6">
-      <label>Postal Address</label>
-      <input type="text" class="form-control" id="address" value="
-      <% unless current_sbc_user_data.institute.address.nil? %>
-      <%= current_sbc_user_data.institute.address %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
-    <div class="form-group col-md-4">
-      <%= f.label :imno , "IMNO" %>
+    
+    <div class="form-group col-md-3">
+      <%= f.label :imno , "Institution Number" %>
       <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
       required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
    
     
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-3">
       <label>City</label>
       <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
    
-    <div class="form-group col-md-4">
-      <label>State</label>
-      <input type="text" class="form-control" id="state"  value="
-      <% unless current_sbc_user_data.institute.state.nil? %>
-      <%= current_sbc_user_data.institute.state %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
+    
    
     
     <p class="primary-form-subheading">SBC Details</p> 
@@ -69,21 +51,21 @@ over the past 3 years)
     <div class="form-group col-md-3">
       <%= f.label :volunteers_added  , "# CSI Volunteers added - 2016-17" %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
+      min: "0" ,max: "100", maxlength: "3", title:"Enter the number of Volunteers", class: "form-control" %>
     </div>
     
     
     
-    <p class="primary-form-subheading">SBC tenure details:</p>
+    <p class="primary-form-subheading">SBC tenure details (No. of CSI Volunteers Added):</p>
     
     <br>
     <div class="row container">
       <table class="col-md-12">
         <thead>
           <tr>
-            <td><strong>No. of CSI Volunteers Added During 2014-15 -</strong></td>
-            <td><strong>No. of CSI Volunteers Added During 2016-17 -</strong></td>
-            <td><strong>No. of CSI Volunteers Added During 2016-17 -</strong></td>
+            <td><strong>During 2014-15 </strong></td>
+            <td><strong>During 2016-17 </strong></td>
+            <td><strong>During 2016-17 </strong></td>
           </tr>
         </thead>
         <tbody>
@@ -105,12 +87,15 @@ over the past 3 years)
   <br></br>
    
    
-   <div>
-        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
-        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
-      </div>
+   <p class="proof"><strong>Upload Passport size photo of candidate in a single zip file in the link below</strong></p>
     
+    <div>
+        
+<%= f.label :attachment %>
+        
+<%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
     
+  </div>
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
             <%= f.submit "Submit" , class: "btn btn-success btn-lg" %>
