--- a/app/views/newsletterawards/_form.html.erb
+++ b/app/views/newsletterawards/_form.html.erb
@@ -5,18 +5,9 @@
 
      
    <div class="row">
-    <div class="col-md-3">
-    <div class="form-group col-md-12">
-      <%= f.label :region  %>
-      <%= f.select(:region, options_for_select([
-          ['I', '1'], 
-          ['II', '2'],
-          ['III','3'], 
-          ['IV', '4'], 
-          ['V', '5'], 
-          ['VI', '6']]), {}, {class: "form-control", autofocus: true}) %>
-    </div>
-    <div class="form-group col-md-12">
+    
+     <p class="primary-form-subheading">Chapter Office Contact details </p>
+    <div class="form-group col-md-3">
       <%= f.label :chapter  %>
      
       <%= f.select(:chapter, options_for_select([
@@ -89,12 +80,12 @@
 ['Visakhapatnam ','Visakhapatnam ']]), {}, {class: "form-control", autofocus: true}) %>
 
 </div>
-    </div>
+    
     <div class="col-md-9">
-    <p class="primary-form-subheading">Chapter Office Contact details </p>
+   
     <div class="form-group col-md-6">
       <%= f.label :address  %>
-      <%= f.text_area :address , required: true , class: "form-control"%>
+      <%= f.text_field :address , required: true , class: "form-control"%>
     </div>
     <div class="form-group col-md-3">
       <%= f.label :phone  %>
