--- a/app/views/studentbranchactivists/_form.html.erb
+++ b/app/views/studentbranchactivists/_form.html.erb
@@ -6,43 +6,24 @@
  CSI Student Branch during 01/07/2016 to 30/06/2017) </p>     
     <p class="primary-form-subheading">Institution Details</p> 
     <div class="row institution-details">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-5">
      <label>Institution Name</label>
      <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
-    <div class="form-group col-md-6">
-      <label>Postal Address</label>
-      <input type="text" class="form-control" id="address" value="
-      <% unless current_sbc_user_data.institute.address.nil? %>
-      <%= current_sbc_user_data.institute.address %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
-    <div class="form-group col-md-3">
-      <%= f.label :imno , "IMNO" %>
+   
+    <div class="form-group col-md-2">
+      <%= f.label :imno , "Institution Number" %>
       <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
       required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
     
     
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>City</label>
       <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
     
-    <div class="form-group col-md-3">
-      <label>State</label>
-      <input type="text" class="form-control" id="state"  value="
-      <% unless current_sbc_user_data.institute.state.nil? %>
-      <%= current_sbc_user_data.institute.state %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
-    
+ 
     
     <div class="form-group col-md-3">
       <label>Head of the Institution</label>
@@ -108,7 +89,7 @@
       <%= f.date_field :valid_till ,  required: true, class: "form-control" %>
     </div>
    
-    
+     <p class="proof"><strong>Attach Passport size Photo of the candidate</strong></p>
     
     
    <p class="primary-form-subheading">Event Details:</p>  
@@ -131,11 +112,18 @@
         <%= link_to_add_association 'Add Event', f, :eventdetailsbystudentactivists , class: "form-button btn btn-primary" %>
     </div>
     
-    <div>
-        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
-        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
-      </div>
+    <p class="proof fifthform"><strong>(Table may be extended as required. Attach 
+    copies of event brochure / invitation, photos taken at the events etc) *</strong></p>
     
+     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
+     <br>
+    <div>
+        
+<%= f.label :attachment %>
+        
+<%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+    
+  </div>
     
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
