--- a/app/views/studentmaxpublishings/_form.html.erb
+++ b/app/views/studentmaxpublishings/_form.html.erb
@@ -7,42 +7,24 @@ during 01/07/2016 to 30/06/2017)
     <div class="primary-form">
     <p class="primary-form-subheading">Institution Details</p> 
     <div class="row institution-details">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-5">
      <label>Institution Name</label>
      <input type="text" class="form-control" id="name" value="<%= current_sbc_user_data.institute.name %>" disabled>     
     </div>
-    <div class="form-group col-md-6">
-      <label>Postal Address</label>
-      <input type="text" class="form-control" id="address" value="
-      <% unless current_sbc_user_data.institute.address.nil? %>
-      <%= current_sbc_user_data.institute.address %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
-   <div class="form-group col-md-3">
-      <%= f.label :imno , "IMNO" %>
+    
+   <div class="form-group col-md-2">
+      <%= f.label :imno , "Institution Number" %>
       <%= f.text_field :imno , value: current_sbc_user_data.institute.imno,
       required: true , readonly: true ,class: "form-control" , id:"imno"%>
     </div>
     
     
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>City</label>
       <input type="text" class="form-control" id="city" value="<%= current_sbc_user_data.institute.city %>" disabled> 
     </div>
    
-    <div class="form-group col-md-3">
-      <label>State</label>
-      <input type="text" class="form-control" id="state"  value="
-      <% unless current_sbc_user_data.institute.state.nil? %>
-      <%= current_sbc_user_data.institute.state %>
-      <% else %>
-      <%= "Not available" %>
-      <% end %>
-      " disabled> 
-    </div>
+   
     
     <div class="form-group col-md-3">
       <label>Head of the Institution</label>
@@ -100,7 +82,7 @@ during 01/07/2016 to 30/06/2017)
       <%= f.date_field :valid_till ,  required: true, class: "form-control" %>
     </div>
     
-    
+     <p class="proof"><strong>Attach Passport size Photo of the candidate</strong></p>
     </div>
     </div>
     
@@ -125,12 +107,18 @@ during 01/07/2016 to 30/06/2017)
         <%= link_to_add_association 'Add Event', f, :publishingdetailbystudents , class: "form-button btn btn-primary" %>
     </div>
     
-    <div>
-        <%= f.label :attachment, "Upload Your Data in Zip file:" %>
-        <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
-      </div>
+    <p class="proof fifthform"><strong>(Table may be
+    extended as required. Attach copy of articles as published in CSIC / CSI Journal of Computing) *</strong></p>
     
+     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
+     <br>
+     <div>
+        
+<%= f.label :attachment %>
+        
+<%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
     
+  </div>
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
             <%= f.submit "Submit" , class: "btn btn-primary btn-lg" %>
