--- a/app/views/welcome/_nav.html.erb
+++ b/app/views/welcome/_nav.html.erb
@@ -8,7 +8,7 @@
     <ul class="nav navbar-nav navbar-right">
       
       <% if user_signed_in? %>
-         <li><a href="#"><%= current_user.email %></a></li>
+         <li><a href="#"><strong>User - </strong><%= current_user.email %></a></li>
         <li><%= link_to "Sign out" , destroy_user_session_path , method: :delete %></li>
       <% end %>
     </ul>
