--- a/app/views/individualserviceawards/new.html.erb
+++ b/app/views/individualserviceawards/new.html.erb
@@ -1,3 +1,8 @@
 <h3 align="center">Nomination Form for CSI Best Service Awards (Individual)</h2>
 <br>
+<% if is_chairman? %>
 <%= render "form" %>
+<% else %>
+<p class="jumbotron">Only Chapter Chariman can fill this award</p>
+<p><%= link_to "Fill Other Awards", root_path %></p>
+<% end %>
