--- a/app/views/bestthesisawards/_recordforthesisaward_fields.html.erb
+++ b/app/views/bestthesisawards/_recordforthesisaward_fields.html.erb
@@ -22,7 +22,7 @@
 
 <div class="form-group sf col-md-2">
         
-        <%= f.date_field :date ,  required: true , class: "form-control" %>
+        <%= f.date_field :date ,max: "2017-06-30", min: "2016-07-01",  required: true , class: "form-control" %>
 </div>
 
 <div class="form-group sf col-md-4">
