--- a/app/views/newsletterawards/_detailsfornewsletteraward_fields.html.erb
+++ b/app/views/newsletterawards/_detailsfornewsletteraward_fields.html.erb
@@ -4,7 +4,7 @@
 
 <div class="form-group sf col-md-3">
         
-        <%= f.date_field :date_of_publication , required: true, class: "form-control"%>
+        <%= f.date_field :date_of_publication , required: true,max: "2017-03-31", min: "2016-04-01", class: "form-control"%>
 </div>
 <div class="form-group sf col-md-4">
        
