--- a/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
@@ -13,7 +13,7 @@
 
 <div class="form-group sf col-md-3">
         
-      <%= f.date_field :date_of_event ,  required: true , class: "form-control" %>
+      <%= f.date_field :date_of_event ,max: "2017-06-30", min: "2016-07-01",  required: true , class: "form-control" %>
 </div>
 
 <div class="form-group sf col-md-2">
