--- a/app/views/facmaxpublishings/_publishingdetailbyfaculty_fields.html.erb
+++ b/app/views/facmaxpublishings/_publishingdetailbyfaculty_fields.html.erb
@@ -13,7 +13,7 @@
 </div>
 <div class="form-group sf col-md-4">
         
-        <%= f.date_field :date_of_publishing , required: true, class: "form-control" %>
+        <%= f.date_field :date_of_publishing , required: true ,max: "2017-06-30", min: "2016-07-01", class: "form-control" %>
 </div>
 
 
