--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -57,7 +57,7 @@ software competition participated by a minimum of 10 students from abroad 01/07/
     <div class="form-group col-md-3">
       <%= f.label :volunteers_added  , "# CSI Volunteers added - 2016-17" %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", class: "form-control" %>
+      min: "0" ,max: "999", maxlength: "3", class: "form-control" %>
     </div>
     </div>
     </div>
@@ -95,7 +95,8 @@ software competition participated by a minimum of 10 students from abroad 01/07/
     <p class="proof thirdform">(Table may be extended as required.
     Attach document proof such as photo, invitation, brochure etc along with the list of foreign participants ) *</p>
      <br>
-     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
+    <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
+    file in the link below , zip file size should be less than 20mb</strong></p>
     
   <div>
         
