--- a/app/views/bestthesisawards/_form.html.erb
+++ b/app/views/bestthesisawards/_form.html.erb
@@ -131,7 +131,8 @@
         significance of the research contribution
         , potential impact on theory and practice, quality of presentation and other parameters of importance.</li></strong>
       </ol>
-     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
+      <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
+    file in the link below , zip file size should be less than 20mb</strong></p>
      <br>
     
      <div>
