--- a/app/views/facmaxpublishings/_form.html.erb
+++ b/app/views/facmaxpublishings/_form.html.erb
@@ -61,8 +61,8 @@ during 01/07/2016 to 30/06/2017)
    <p class="proof fifthform"><strong>(Table may be ex
    tended as required. Attach copy of articles as published in CSI Publications) *</strong></p>
     
-     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
-     <br>
+      <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
+    file in the link below , zip file size should be less than 20mb</strong></p>
       <div>
         
 <%= f.label :attachment %>
