--- a/app/views/highestsponsorshipofcsievents/_form.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_form.html.erb
@@ -49,7 +49,7 @@ during 01/07/2016 to 30/06/2017)
     <div class="form-group col-md-3">
       <%= f.label :volunteers_added  , "# CSI Volunteers added - 2016-17" %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", title:"Enter the number of Volunteers", class: "form-control" %>
+      min: "0" ,max: "999", maxlength: "3", title:"Enter the number of Volunteers", class: "form-control" %>
     </div>
     
     </div>
@@ -88,7 +88,8 @@ during 01/07/2016 to 30/06/2017)
     brochure of the events, photos taken on the occasion etc along with receipts for sponsorship amount paid) *</p>
      <br>
    
-    <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
+    <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
+    file in the link below , zip file size should be less than 20mb</strong></p>
   
     <div>
         
