--- a/app/views/studentbranchactivists/_form.html.erb
+++ b/app/views/studentbranchactivists/_form.html.erb
@@ -62,7 +62,7 @@
     <div class="form-group col-md-3">
       <%= f.label :volunteers_added  , "# CSI Volunteers added - 2016-17 " %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
+      min: "0" ,max: "999", maxlength: "3", title: "Number of CSI Volunteers added during  July 2017 – June 2018", class: "form-control" %>
     </div>
 
     
@@ -115,7 +115,8 @@
     <p class="proof fifthform"><strong>(Table may be extended as required. Attach 
     copies of event brochure / invitation, photos taken at the events etc) *</strong></p>
     
-     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
+      <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
+    file in the link below , zip file size should be less than 20mb</strong></p>
      <br>
     <div>
         
