--- a/app/views/longestcontinuoussbcs/_form.html.erb
+++ b/app/views/longestcontinuoussbcs/_form.html.erb
@@ -51,7 +51,7 @@ over the past 3 years)
     <div class="form-group col-md-3">
       <%= f.label :volunteers_added  , "# CSI Volunteers added - 2016-17" %>
       <%= f.text_field :volunteers_added , required: true , type: "number",
-      min: "0" ,max: "100", maxlength: "3", title:"Enter the number of Volunteers", class: "form-control" %>
+      min: "0" ,max: "999", maxlength: "3", title:"Enter the number of Volunteers", class: "form-control" %>
     </div>
     
     
@@ -87,15 +87,17 @@ over the past 3 years)
   <br></br>
    
    
-   <p class="proof"><strong>Upload Passport size photo of candidate in a single zip file in the link below</strong></p>
+    <p class="proof"><strong>Upload Candidate Passport size photo in a <strong>single zip</strong> 
+    file in the link below , zip file size should be less than 20mb</strong></p>
     
-       <div>
+    <div>
         
 <%= f.label :attachment %>
         
 <%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
     
   </div>
+       
   
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
