--- a/app/views/paperpresenters/_form.html.erb
+++ b/app/views/paperpresenters/_form.html.erb
@@ -61,7 +61,8 @@ during 01/07/2016 to 30/06/2017)
   <p class="proof fifthform"><strong>(Table may be extended as required.
   Attach copy of paper from Conference proceedings and Certificate Conference brochure copy) *</strong></p>
     
-     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
+      <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
+    file in the link below , zip file size should be less than 20mb</strong></p>
      <br>
       <div>
         
