--- a/app/views/studentmaxpublishings/_form.html.erb
+++ b/app/views/studentmaxpublishings/_form.html.erb
@@ -110,7 +110,8 @@ during 01/07/2016 to 30/06/2017)
     <p class="proof fifthform"><strong>(Table may be
     extended as required. Attach copy of articles as published in CSIC / CSI Journal of Computing) *</strong></p>
     
-     <p class="proof"><strong>Upload All the attachments in a <strong>single zip</strong> file in the link below</strong></p>
+     <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
+    file in the link below , zip file size should be less than 20mb</strong></p>
      <br>
      <div>
         
