--- a/app/views/paperpresenters/new.html.erb
+++ b/app/views/paperpresenters/new.html.erb
@@ -1,3 +1,5 @@
+<% if is_csimember? %>
 <h3 align="center">Paper Presenter at International Conference for Faculty</h2>
 <br>
 <%= render "form" %>
+<% end %>
