--- a/app/views/bestaccreditedstudentbranches/new.html.erb
+++ b/app/views/bestaccreditedstudentbranches/new.html.erb
@@ -1,9 +1,11 @@
+<% if is_csimember? %>
 <h3 align="center">Best Accredited Student Branch Award</h2>
 
 <br>
-<% if is_sbc? %>
+<% if is_sbc?  %>
 <%= render "form" %>
 <% else %>
 <p class="jumbotron">Only SBC's can fill this award</p>
 <p><%= link_to "Fill Other Awards", root_path %></p>
+<% end %>
 <% end %>
