--- a/app/views/bestcsiinternationalstudentseventhosts/new.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/new.html.erb
@@ -1,3 +1,4 @@
+<% if is_csimember? %>
 <h3 align="center">Best CSI International Students Event Host Award</h2>
 
 <br>
@@ -6,4 +7,5 @@
 <% else %>
 <p class="jumbotron">Only SBC's can fill this award</p>
 <p><%= link_to "Fill Other Awards", root_path %></p>
+<% end %>
 <% end %>
