--- a/app/views/facmaxpublishings/new.html.erb
+++ b/app/views/facmaxpublishings/new.html.erb
@@ -1,3 +1,5 @@
+<% if is_csimember? %>
 <h3 align="center">Faculty with maximum publishing in CSI Publications</h3>
 
 <%= render "form" %>
+<% end %>
