--- a/app/views/studentbranchactivists/new.html.erb
+++ b/app/views/studentbranchactivists/new.html.erb
@@ -1,3 +1,4 @@
+<% if is_csimember? %>
 <h3 align="center">Highest Committed Student Branch Activist Award</h3>
 
 <% if is_sbc? %>
@@ -5,4 +6,5 @@
 <% else %>
 <p class="jumbotron">Only SBC's can fill this award</p>
 <p><%= link_to "Fill Other Awards", root_path %></p>
+<% end %>
 <% end %>
