--- a/app/views/facmaxpublishings/_form.html.erb
+++ b/app/views/facmaxpublishings/_form.html.erb
@@ -68,9 +68,10 @@ during 01/07/2016 to 30/06/2017)
         
 <%= f.label :attachment %>
         
-<%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+<%= f.filepicker_field :attachment , {mimetypes: "application/zip, application/octet-stream" , button_text: "Upload One Zip File" } %> <!-- User#avatar_url is a regular string column -->
     
   </div>
+    
      
 
     <div class="form-group">
