--- a/app/views/longestcontinuoussbcs/_form.html.erb
+++ b/app/views/longestcontinuoussbcs/_form.html.erb
@@ -94,9 +94,10 @@ over the past 3 years)
         
 <%= f.label :attachment %>
         
-<%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+<%= f.filepicker_field :attachment , {mimetypes: "application/zip, application/octet-stream" , button_text: "Upload One Zip File" } %> <!-- User#avatar_url is a regular string column -->
     
   </div>
+    
        
   
     <div class="form-group">
