--- a/app/views/studentmaxpublishings/_form.html.erb
+++ b/app/views/studentmaxpublishings/_form.html.erb
@@ -113,13 +113,14 @@ during 01/07/2016 to 30/06/2017)
      <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
     file in the link below , zip file size should be less than 20mb</strong></p>
      <br>
-     <div>
+    <div>
         
 <%= f.label :attachment %>
         
-<%= f.filepicker_field :attachment %> <!-- User#avatar_url is a regular string column -->
+<%= f.filepicker_field :attachment , {mimetypes: "application/zip, application/octet-stream" , button_text: "Upload One Zip File" } %> <!-- User#avatar_url is a regular string column -->
     
   </div>
+    
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
             <%= f.submit "Submit" , class: "btn btn-primary btn-lg" %>
