--- a/app/views/bestaccreditedstudentbranches/_form.html.erb
+++ b/app/views/bestaccreditedstudentbranches/_form.html.erb
@@ -208,7 +208,7 @@
     
     <div class="form-group col-md-12">
       <%= f.label :student_branch_website_url , "Website URL of CSI Student Branch" %>
-      <%= f.text_field :student_branch_website_url , type: "url" ,title: "Please enter a valid URL" , class: "form-control"%>
+      <%= f.text_field :student_branch_website_url ,title: "Please enter a valid URL" , class: "form-control"%>
     </div>
    
 
