--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -187,3 +187,12 @@ div.form-group.sf{
 #brand-logo{
     padding-top: 10px;
 }
+.credits{
+    background: #222222;
+    text-align: center;
+    position: absolute;
+    color: #8d9d9d;
+    bottom: 0;
+   
+    width: 82em;
+}
