--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -79,3 +79,10 @@
 <p class="jumbotron"> You do not seem like a Registered CSI Member.Please Sign in with your Email Id registered with CSI</p>
  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
 <% end %>
+
+<footer>
+<p class="credits">Designed and Visualized by Chairman, Div - II, Computer Society of India
+<br></br>
+</p>
+<p class="credits">Credits : Arunachaleeswaran</p>
+</footer>
